# 3D-tutorial

./: .gitignore  README.md
docs/: IDE.md  README.md  algo.md  arch.md  buildsys.md  cpp.md  debug.md  package.md
src/: .clang-tidy  CMakeLists.txt  conanfile.txt  doxygen
src/3D-renderer/: CMakeLists.txt  application.cpp  application.h  array-inl.h  array.h  camera.cpp  camera.h  controls.cpp  controls.h  cube.cpp  cube.h  io.cpp  io.h  object.h  parser.cpp  parser.h  renderer.cpp  renderer.h  screen.cpp  screen.h  world.cpp  world.h  zbuffer.cpp  zbuffer.h
src/3D-renderer/geometry/: CMakeLists.txt  functions.cpp  functions.h  objects.cpp  objects.h
src/resources/: gen.py
src/tests/: CMakeLists.txt  main.cpp
